project(wpn-lnotify)
cmake_minimum_required(VERSION 3.4.0)
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../)
set(SO_LNOTIFY "wpn-lnotify")
set(SO_STDOUT "wpn-stdout")
file(GLOB SOURCE_LNOTIFY wpn-lnotify.cpp)
file(GLOB SOURCE_STDOUT wpn-stdout.cpp)
file(GLOB HEADERS_LNOTIFY wpn-notify.h)
file(GLOB HEADERS_STDOUT wpn-notify.h)
set (CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(${SO_LNOTIFY} SHARED ${SOURCE_LNOTIFY} ${HEADERS_LNOTIFY})
add_library(${SO_STDOUT} SHARED ${SOURCE_STDOUT} ${HEADERS_STDOUT})	
target_link_libraries(${SO_LNOTIFY})
target_link_libraries(${SO_STDOUT})
target_include_directories(${SO_LNOTIFY} PUBLIC "${CMAKE_CURRENT_BINARY_DIR} ${HEADERS_LNOTIFY}")
target_include_directories(${SO_STDOUT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR} ${HEADERS_STDOUT})

install(TARGETS ${PROJECT_NAME} DESTINATION bin)